style: Add padding to drawer to fix avatar overlap

--- a/src/index.css
+++ b/src/index.css
@@ -689,6 +689,7 @@ code {
     transform: translate(0, 0);
     width: 100%;
     height: 3em;
+    padding-bottom: .5em;
     border-bottom: 5px solid #43CDA4;
     margin-bottom: 1em;
     color: #696969;
